<resources>
    <string name="app_name">Proyecto-app-moviles</string>
    <string name="login">Login</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="reg_strate_aqu">Regístrate aquí</string>
    <string name="the_best_way_to_get_a_computer">The best way to get a computer</string>
    <string name="eztek">EZTEK</string>
    <string name="correo">Correo</string>
    <string name="Confirmar_contrase_a">Confirmar contraseña</string>
    <string name="registrar">\Registrar</string>
    <string name="iniciar_sesion_aqui">iniciar sesion aqui</string>
    <string name="carrito">Carrito</string>
    <string name="ajustes">Ajustes</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="desc_imagen_producto">descripcion\n</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="buscar_producto">Buscar producto...</string>
    <string name="email">Correo electronico Registrado\n</string>
    <string name="recover_password">Recuperar Contraseña\n</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="desactivar_cuenta">Desactivar Cuenta</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="confirmar_nueva_contrase_a">Confirmar Nueva Contraseña</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
</resources>