<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/contenedorBuscar"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:background="@drawable/logov1"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/contenedorBuscar"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="text"
                android:fontFamily="@font/robotoregular"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                android:singleLine="true"
                android:maxLines="1"
                android:hint="@string/buscar_producto"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/btnAgregarProducto"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Agregar producto"
                android:layout_gravity="end" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/menuNavegacion"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">



        <ImageButton
            android:id="@+id/btnPerfil"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:contentDescription="@string/perfil"
            app:srcCompat="@drawable/perfil"
            android:onClick="onBtnPerfilClick" />

        <ImageButton
            android:id="@+id/btnCarrito"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:contentDescription="@string/carrito"
            app:srcCompat="@drawable/carrito"
            android:onClick="onBtnCarritoClick" />

        <ImageButton
            android:id="@+id/btnAjustes_Usuario"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:contentDescription="@string/ajustes"
            app:srcCompat="@drawable/ajustes"
            android:onClick="onBtnAjustesClick" />

    </LinearLayout>

</RelativeLayout>